--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -10113,17 +10113,69 @@
   {
     "descriptors": [
       {
+        "defaultMessage": "!!!No transactions",
+        "description": "Message shown when wallet has no transactions yet.",
+        "end": {
+          "column": 3,
+          "line": 24
+        },
+        "file": "source/renderer/app/components/wallet/transactions/WalletTransactions.js",
+        "id": "wallet.transactions.no.transactions",
+        "start": {
+          "column": 18,
+          "line": 20
+        }
+      }
+    ],
+    "path": "source/renderer/app/components/wallet/transactions/WalletTransactions.json"
+  },
+  {
+    "descriptors": [
+      {
+        "defaultMessage": "!!!Transactions",
+        "description": "Label for the \"Transactions\" header.",
+        "end": {
+          "column": 3,
+          "line": 18
+        },
+        "file": "source/renderer/app/components/wallet/transactions/WalletTransactionsHeader.js",
+        "id": "wallet.transactions.header.transactions",
+        "start": {
+          "column": 16,
+          "line": 14
+        }
+      },
+      {
+        "defaultMessage": "!!!Export CSV",
+        "description": "Label for the \"Export CSV\" button.",
+        "end": {
+          "column": 3,
+          "line": 23
+        },
+        "file": "source/renderer/app/components/wallet/transactions/WalletTransactionsHeader.js",
+        "id": "wallet.transactions.header.exportCSV.button.label",
+        "start": {
+          "column": 24,
+          "line": 19
+        }
+      }
+    ],
+    "path": "source/renderer/app/components/wallet/transactions/WalletTransactionsHeader.json"
+  },
+  {
+    "descriptors": [
+      {
         "defaultMessage": "!!!Today",
         "description": "Label for the \"Today\" label on the wallet summary page.",
         "end": {
           "column": 3,
-          "line": 25
+          "line": 24
         },
         "file": "source/renderer/app/components/wallet/transactions/WalletTransactionsList.js",
         "id": "wallet.summary.page.todayLabel",
         "start": {
           "column": 9,
-          "line": 21
+          "line": 20
         }
       },
       {
@@ -10131,13 +10183,13 @@
         "description": "Label for the \"Yesterday\" label on the wallet summary page.",
         "end": {
           "column": 3,
-          "line": 30
+          "line": 29
         },
         "file": "source/renderer/app/components/wallet/transactions/WalletTransactionsList.js",
         "id": "wallet.summary.page.yesterdayLabel",
         "start": {
           "column": 13,
-          "line": 26
+          "line": 25
         }
       },
       {
@@ -10145,13 +10197,13 @@
         "description": "Label for the \"Show more transactions\" button on the wallet summary page.",
         "end": {
           "column": 3,
-          "line": 36
+          "line": 35
         },
         "file": "source/renderer/app/components/wallet/transactions/WalletTransactionsList.js",
         "id": "wallet.summary.page.showMoreTransactionsButtonLabel",
         "start": {
           "column": 35,
-          "line": 31
+          "line": 30
         }
       },
       {
@@ -10159,13 +10211,13 @@
         "description": "Syncing transactions message on async wallet restore.",
         "end": {
           "column": 3,
-          "line": 42
+          "line": 41
         },
         "file": "source/renderer/app/components/wallet/transactions/WalletTransactionsList.js",
         "id": "wallet.summary.page.syncingTransactionsMessage",
         "start": {
           "column": 30,
-          "line": 37
+          "line": 36
         }
       }
     ],
@@ -13447,25 +13499,6 @@
   {
     "descriptors": [
       {
-        "defaultMessage": "!!!No transactions",
-        "description": "Message shown when wallet has no transactions yet.",
-        "end": {
-          "column": 3,
-          "line": 25
-        },
-        "file": "source/renderer/app/containers/wallet/WalletTransactionsPage.js",
-        "id": "wallet.transactions.no.transactions",
-        "start": {
-          "column": 18,
-          "line": 21
-        }
-      }
-    ],
-    "path": "source/renderer/app/containers/wallet/WalletTransactionsPage.json"
-  },
-  {
-    "descriptors": [
-      {
         "defaultMessage": "!!!This field is required.",
         "description": "Error message when required fields are left empty.",
         "end": {
@@ -14401,6 +14434,193 @@
       }
     ],
     "path": "source/renderer/app/utils/paperWalletPdfGenerator.json"
+  },
+  {
+    "descriptors": [
+      {
+        "defaultMessage": "!!!ID",
+        "description": "Transactions CSV column - ID",
+        "end": {
+          "column": 3,
+          "line": 15
+        },
+        "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
+        "id": "wallet.transactions.csv.column.id",
+        "start": {
+          "column": 12,
+          "line": 11
+        }
+      },
+      {
+        "defaultMessage": "!!!Type",
+        "description": "Transactions CSV column - Type",
+        "end": {
+          "column": 3,
+          "line": 20
+        },
+        "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
+        "id": "wallet.transactions.csv.column.type",
+        "start": {
+          "column": 14,
+          "line": 16
+        }
+      },
+      {
+        "defaultMessage": "!!!Amount",
+        "description": "Transactions CSV column - Amount",
+        "end": {
+          "column": 3,
+          "line": 25
+        },
+        "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
+        "id": "wallet.transactions.csv.column.amount",
+        "start": {
+          "column": 16,
+          "line": 21
+        }
+      },
+      {
+        "defaultMessage": "!!!Date & time",
+        "description": "Transactions CSV column - DateTime",
+        "end": {
+          "column": 3,
+          "line": 30
+        },
+        "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
+        "id": "wallet.transactions.csv.column.dateTime",
+        "start": {
+          "column": 18,
+          "line": 26
+        }
+      },
+      {
+        "defaultMessage": "!!!Status",
+        "description": "Transactions CSV column - Status",
+        "end": {
+          "column": 3,
+          "line": 35
+        },
+        "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
+        "id": "wallet.transactions.csv.column.status",
+        "start": {
+          "column": 16,
+          "line": 31
+        }
+      },
+      {
+        "defaultMessage": "!!!Addresses from",
+        "description": "Transactions CSV column - AddressesFrom",
+        "end": {
+          "column": 3,
+          "line": 40
+        },
+        "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
+        "id": "wallet.transactions.csv.column.addressesFrom",
+        "start": {
+          "column": 23,
+          "line": 36
+        }
+      },
+      {
+        "defaultMessage": "!!!Addresses to",
+        "description": "Transactions CSV column - AddressesTo",
+        "end": {
+          "column": 3,
+          "line": 45
+        },
+        "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
+        "id": "wallet.transactions.csv.column.addressesTo",
+        "start": {
+          "column": 21,
+          "line": 41
+        }
+      },
+      {
+        "defaultMessage": "!!!Withdrawals",
+        "description": "Transactions CSV column - Withdrawals",
+        "end": {
+          "column": 3,
+          "line": 50
+        },
+        "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
+        "id": "wallet.transactions.csv.column.withdrawals",
+        "start": {
+          "column": 21,
+          "line": 46
+        }
+      },
+      {
+        "defaultMessage": "!!!Expend",
+        "description": "Transactions CSV value - Type Expend",
+        "end": {
+          "column": 3,
+          "line": 55
+        },
+        "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
+        "id": "wallet.transactions.csv.value.type.expend",
+        "start": {
+          "column": 19,
+          "line": 51
+        }
+      },
+      {
+        "defaultMessage": "!!!Income",
+        "description": "Transactions CSV value - Type Income",
+        "end": {
+          "column": 3,
+          "line": 60
+        },
+        "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
+        "id": "wallet.transactions.csv.value.type.income",
+        "start": {
+          "column": 19,
+          "line": 56
+        }
+      },
+      {
+        "defaultMessage": "!!!{amount} ADA",
+        "description": "Transactions CSV value - Amount",
+        "end": {
+          "column": 3,
+          "line": 65
+        },
+        "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
+        "id": "wallet.transactions.csv.value.amount",
+        "start": {
+          "column": 15,
+          "line": 61
+        }
+      },
+      {
+        "defaultMessage": "!!!Confirmed",
+        "description": "Transactions CSV value - Status Confirmed",
+        "end": {
+          "column": 3,
+          "line": 70
+        },
+        "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
+        "id": "wallet.transactions.csv.value.statusConfirmed",
+        "start": {
+          "column": 24,
+          "line": 66
+        }
+      },
+      {
+        "defaultMessage": "!!!Pending",
+        "description": "Transactions CSV value - Status Pending",
+        "end": {
+          "column": 3,
+          "line": 75
+        },
+        "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
+        "id": "wallet.transactions.csv.value.statusPending",
+        "start": {
+          "column": 22,
+          "line": 71
+        }
+      }
+    ],
+    "path": "source/renderer/app/utils/transactionsCsvGenerator.json"
   },
   {
     "descriptors": [
