--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -918,6 +918,19 @@
   "wallet.transaction.type.exchange": "Exchange",
   "wallet.transaction.unresolvedInputAddressesAdditionalLabel": "to see these addresses.",
   "wallet.transaction.unresolvedInputAddressesLinkLabel": "Open this transaction in Cardano explorer",
+  "wallet.transactions.csv.column.addressesFrom": "Addresses from",
+  "wallet.transactions.csv.column.addressesTo": "Addresses to",
+  "wallet.transactions.csv.column.amount": "Amount",
+  "wallet.transactions.csv.column.dateTime": "Date & time",
+  "wallet.transactions.csv.column.id": "ID",
+  "wallet.transactions.csv.column.status": "Status",
+  "wallet.transactions.csv.column.type": "Type",
+  "wallet.transactions.csv.column.withdrawals": "Withdrawals",
+  "wallet.transactions.csv.value.amount": "{amount} ADA",
+  "wallet.transactions.csv.value.statusConfirmed": "Confirmed",
+  "wallet.transactions.csv.value.statusPending": "Pending",
+  "wallet.transactions.csv.value.type.expend": "Expend",
+  "wallet.transactions.csv.value.type.income": "Income",
   "wallet.transactions.header.exportCSV.button.label": "Export CSV",
   "wallet.transactions.header.transactions": "Transactions",
   "wallet.transactions.no.transactions": "No transactions",
