--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -918,20 +918,20 @@
   "wallet.transaction.type.exchange": "換金",
   "wallet.transaction.unresolvedInputAddressesAdditionalLabel": "アドレスを表示する。",
   "wallet.transaction.unresolvedInputAddressesLinkLabel": "Cardanoエクスプローラーでこのトランザクションを開き",
-  "wallet.transactions.csv.column.addressesFrom": "!!!Addresses from",
-  "wallet.transactions.csv.column.addressesTo": "!!!Addresses to",
-  "wallet.transactions.csv.column.amount": "!!!Amount",
-  "wallet.transactions.csv.column.dateTime": "!!!Date & time",
-  "wallet.transactions.csv.column.id": "!!!ID",
-  "wallet.transactions.csv.column.status": "!!!Status",
-  "wallet.transactions.csv.column.type": "!!!Type",
-  "wallet.transactions.csv.column.withdrawals": "!!!Withdrawals",
-  "wallet.transactions.csv.value.amount": "!!!{amount} ADA",
-  "wallet.transactions.csv.value.statusConfirmed": "!!!Confirmed",
-  "wallet.transactions.csv.value.statusPending": "!!!Pending",
-  "wallet.transactions.csv.value.type.expend": "!!!Expend",
-  "wallet.transactions.csv.value.type.income": "!!!Income",
-  "wallet.transactions.header.exportCSV.button.label": "!!!Export CSV",
+  "wallet.transactions.csv.column.addressesFrom": "送信元アドレス",
+  "wallet.transactions.csv.column.addressesTo": "送信先アドレス",
+  "wallet.transactions.csv.column.amount": "額",
+  "wallet.transactions.csv.column.dateTime": "日時",
+  "wallet.transactions.csv.column.id": "ID",
+  "wallet.transactions.csv.column.status": "ステータス",
+  "wallet.transactions.csv.column.type": "タイプ",
+  "wallet.transactions.csv.column.withdrawals": "引き出し",
+  "wallet.transactions.csv.value.amount": "{amount}ADA",
+  "wallet.transactions.csv.value.statusConfirmed": "承認済み",
+  "wallet.transactions.csv.value.statusPending": "保留中",
+  "wallet.transactions.csv.value.type.expend": "送金",
+  "wallet.transactions.csv.value.type.income": "入金",
+  "wallet.transactions.header.exportCSV.button.label": "CSVをエクスポートする",
   "wallet.transactions.header.transactions": "トランザクション",
   "wallet.transactions.no.transactions": "トランザクションはありません",
   "wallet.transferFunds.dialog1.continueLabel": "続ける",
