--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -572,8 +572,8 @@
   "test.environment.shelleyTestnetLabel": "Shelley Testnet",
   "test.environment.stagingLabel": "Staging",
   "test.environment.testnetLabel": "Testnet",
-  "wallet.add.dialog.connect.description": "Connect a hardware wallet",
-  "wallet.add.dialog.connect.label": "Connect",
+  "wallet.add.dialog.connect.description": "Pair a hardware wallet device",
+  "wallet.add.dialog.connect.label": "Pair",
   "wallet.add.dialog.create.description": "Create a new wallet",
   "wallet.add.dialog.create.description.itn": "Create a new wallet",
   "wallet.add.dialog.create.label": "Create",
@@ -619,8 +619,8 @@
   "wallet.byron.notification.moveFundsDescription.line2.link.label": "brand new wallet",
   "wallet.byron.notification.moveFundsTitle": "Move funds from \"{activeWalletName}\"",
   "wallet.connect.dialog.button.cancel": "Cancel",
-  "wallet.connect.dialog.instructions": "<p><b>Daedalus currently supports only Trezor Model T hardware wallet devices.</b></p><p>If you are <b>connecting your device with Daedalus for the first time</b>, please follow the instructions below.</p><p>If you have <b>already connected your device with Daedalus</b>, you don’t need to repeat this step. Just connect your device when you need to confirm a transaction.</p>",
-  "wallet.connect.dialog.title": "Connect a hardware wallet device",
+  "wallet.connect.dialog.instructions": "<p><b>Daedalus currently supports only Trezor Model T hardware wallet devices.</b></p><p>If you are <b>pairing your device with Daedalus for the first time</b>, please follow the instructions below.</p><p>If you have <b>already paired your device with Daedalus</b>, you don’t need to repeat this step. Just connect your device when you need to confirm a transaction.</p>",
+  "wallet.connect.dialog.title": "Pair a hardware wallet device",
   "wallet.create.dialog.configStep": "Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "Create Shelley wallet",
   "wallet.create.dialog.hashImageStep": "Hash & Image",
@@ -638,7 +638,7 @@
   "wallet.create.dialog.validateStep": "Validate",
   "wallet.create.dialog.walletNameHint": "Enter wallet name",
   "wallet.dialog.passwordTooltip": "<b>We recommend using a password manager app</b> to manage and store your spending password. Generate a unique password using a password manager and paste it here. Passwords should never be reused.",
-  "wallet.hardware.deviceStatus.connecting": "Connect your device and enter your PIN to unlock it",
+  "wallet.hardware.deviceStatus.connecting": "Connect your hardware wallet device",
   "wallet.hardware.deviceStatus.connecting.known": "Connect the \"{walletName}\" device",
   "wallet.hardware.deviceStatus.exportingPublicKeyError": "Disconnect and reconnect your device to restart the process",
   "wallet.hardware.deviceStatus.exporting_public_key": "Export the public key on your device",
