--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -572,8 +572,8 @@
   "test.environment.shelleyTestnetLabel": "Shelleyテストネット",
   "test.environment.stagingLabel": "ステージング",
   "test.environment.testnetLabel": "テストネット",
-  "wallet.add.dialog.connect.description": "ハードウェアウォレットを接続する",
-  "wallet.add.dialog.connect.label": "接続",
+  "wallet.add.dialog.connect.description": "ハードウェアウォレットデバイスをペアリングする",
+  "wallet.add.dialog.connect.label": "ペアリング",
   "wallet.add.dialog.create.description": "ウォレットを新規作成する",
   "wallet.add.dialog.create.description.itn": "Shelleyウォレットを新規作成する",
   "wallet.add.dialog.create.label": "作成",
@@ -618,8 +618,8 @@
   "wallet.byron.notification.moveFundsDescription.line2": "{moveFundsLink}か、既存ウォレットの1つに資金を移すことができます。",
   "wallet.byron.notification.moveFundsDescription.line2.link.label": "ウォレットを新規作成する",
   "wallet.byron.notification.moveFundsTitle": "「{activeWalletName}」の資金を移してください",
-  "wallet.connect.dialog.button.cancel": "!!!Cancel",
-  "wallet.connect.dialog.instructions": "<p><b>Daedalusが現在サポートするハードウェアウォレットデバイスはTrezor Model Tのみです。</b><p><p><b>デバイスを初めてDaedalusに接続する場合</b>は、以下の指示に従ってください<p><p><b>すでにDaedalusと接続したことがあるデバイスの場合</b>には、この手順を繰り返す必要はありません。トランザクションを確認する必要があるときに、デバイスを接続してください。<p>",
+  "wallet.connect.dialog.button.cancel": "キャンセル",
+  "wallet.connect.dialog.instructions": "<p><b>Daedalusが現在サポートするハードウェアウォレットデバイスはTrezor Model Tのみです。</b></p><p><b>デバイスを初めてDaedalusにペアリングする場合</b>は、以下の指示に従ってください。</p><p><b>Daedalusとペアリング済みであるデバイスの場合</b>には、この手順を繰り返す必要はありません。トランザクションを確認する必要があるときに、デバイスを接続してください。<p>",
   "wallet.connect.dialog.title": "ハードウェアウォレットを接続する",
   "wallet.create.dialog.configStep": "!!!Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "Shelleyウォレットを作成する",
@@ -638,7 +638,7 @@
   "wallet.create.dialog.validateStep": "!!!Validate",
   "wallet.create.dialog.walletNameHint": "ウォレット名を入力してください",
   "wallet.dialog.passwordTooltip": "送信時パスワードの管理および保存には、<b>パスワード管理アプリの使用が推奨されます。</b>パスワード管理アプリで専用パスワードを生成し、ここに張り付けてください。パスワードは絶対に再利用しないでください。",
-  "wallet.hardware.deviceStatus.connecting": "!!!Connect your device and enter your PIN to unlock it",
+  "wallet.hardware.deviceStatus.connecting": "ハードウェアウォレットデバイスを接続してください",
   "wallet.hardware.deviceStatus.connecting.known": "「{walletName}」デバイスを接続してください",
   "wallet.hardware.deviceStatus.exportingPublicKeyError": "デバイスを切断して再接続し、もう一度プロセスを始めてください",
   "wallet.hardware.deviceStatus.exporting_public_key": "デバイス上で公開鍵をエクスポートしてください",
