--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -194,6 +194,8 @@
   "notification.copyStateDirectoryPath": "Daedalusステータスディレクトリーをクリップボードにコピーしました",
   "notification.downloadLogsProgress": "ダウンロード用のログを準備しています",
   "notification.downloadLogsSuccess": "ログをダウンロードしました",
+  "notification.downloadRewardsCSVSuccess": "!!!CSV file successfully downloaded",
+  "notification.downloadTransactionsCSVSuccess": "!!!CSV file successfully downloaded",
   "paper.wallet.create.certificate.completion.dialog.addressCopiedLabel": "コピーされました",
   "paper.wallet.create.certificate.completion.dialog.addressInstructions": "ペーパーウォレットを用いて資金を受け取るには、ウォレットアドレスを共有してください。",
   "paper.wallet.create.certificate.completion.dialog.addressLabel": "ウォレットアドレス",
@@ -474,7 +476,7 @@
   "staking.stakePools.tableHeader.potentialRewards": "見込み報酬額",
   "staking.stakePools.tableHeader.producedBlocks": "生成ブロック数",
   "staking.stakePools.tableHeader.rank": "ランク",
-  "staking.stakePools.tableHeader.retiring": "で引退",
+  "staking.stakePools.tableHeader.retiring": "終了予定",
   "staking.stakePools.tableHeader.roi": "!!!Roi",
   "staking.stakePools.tableHeader.saturation": "飽和",
   "staking.stakePools.tableHeader.ticker": "ティッカー",
