[DDW-385] CSV download notification JP

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -194,8 +194,8 @@
   "notification.copyStateDirectoryPath": "Daedalusステータスディレクトリーをクリップボードにコピーしました",
   "notification.downloadLogsProgress": "ダウンロード用のログを準備しています",
   "notification.downloadLogsSuccess": "ログをダウンロードしました",
-  "notification.downloadRewardsCSVSuccess": "!!!CSV file successfully downloaded",
-  "notification.downloadTransactionsCSVSuccess": "!!!CSV file successfully downloaded",
+  "notification.downloadRewardsCSVSuccess": "CSVファイルのダウンロードが完了しました",
+  "notification.downloadTransactionsCSVSuccess": "CSVファイルのダウンロードが完了しました",
   "paper.wallet.create.certificate.completion.dialog.addressCopiedLabel": "コピーされました",
   "paper.wallet.create.certificate.completion.dialog.addressInstructions": "ペーパーウォレットを用いて資金を受け取るには、ウォレットアドレスを共有してください。",
   "paper.wallet.create.certificate.completion.dialog.addressLabel": "ウォレットアドレス",
