[DDW-385] Transactions CSV adjustments

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -928,11 +928,12 @@
   "wallet.transactions.csv.column.status": "Status",
   "wallet.transactions.csv.column.type": "Type",
   "wallet.transactions.csv.column.withdrawals": "Withdrawals",
+  "wallet.transactions.csv.filenamePrefix": "Transactions",
   "wallet.transactions.csv.value.amount": "{amount} ADA",
   "wallet.transactions.csv.value.statusConfirmed": "Confirmed",
   "wallet.transactions.csv.value.statusPending": "Pending",
-  "wallet.transactions.csv.value.type.expend": "Expend",
-  "wallet.transactions.csv.value.type.income": "Income",
+  "wallet.transactions.csv.value.type.received": "Received",
+  "wallet.transactions.csv.value.type.sent": "Sent",
   "wallet.transactions.header.exportCSV.button.label": "Export CSV",
   "wallet.transactions.header.transactions": "Transactions",
   "wallet.transactions.no.transactions": "No transactions",
