--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -928,11 +928,12 @@
   "wallet.transactions.csv.column.status": "ステータス",
   "wallet.transactions.csv.column.type": "タイプ",
   "wallet.transactions.csv.column.withdrawals": "引き出し",
+  "wallet.transactions.csv.filenamePrefix": "トランザクション",
   "wallet.transactions.csv.value.amount": "{amount}ADA",
   "wallet.transactions.csv.value.statusConfirmed": "承認済み",
   "wallet.transactions.csv.value.statusPending": "保留中",
-  "wallet.transactions.csv.value.type.expend": "送金",
-  "wallet.transactions.csv.value.type.income": "入金",
+  "wallet.transactions.csv.value.type.sent": "!!!Sent",
+  "wallet.transactions.csv.value.type.received": "!!!Received",
   "wallet.transactions.header.exportCSV.button.label": "CSVをエクスポートする",
   "wallet.transactions.header.transactions": "トランザクション",
   "wallet.transactions.no.transactions": "トランザクションはありません",
