--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -437,6 +437,7 @@
   "staking.redeemItnRewards.step3.success.downloadPDFButtonLabel": "Download PDF certificate",
   "staking.redeemItnRewards.step3.success.openWalletButtonLabel": "Open the wallet",
   "staking.redeemItnRewards.step3.success.title": "Incentivized Testnet rewards redeemed!",
+  "staking.rewards.csvFilenamePrefix": "Rewards",
   "staking.rewards.exportButtonLabel": "Export CSV",
   "staking.rewards.learnMore.ButtonLabel": "Learn more",
   "staking.rewards.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us/articles/900000026583",
